# papercuts

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  astdump.py  chipper.py  concretizer.py  driver.py  ec.py  extract_logic_names.py  generatewrapper.py  main.py  muxer.py  old_assign_syntax  pc_core.py  pc_utils.py  pyproject.toml  pyslang_ast_data  stdump.py  ternary.py  test.py
cpp/: CMakeLists.txt  CMakePresets.json
cpp/bindings/: bindings.cpp
cpp/include/papercuts/: papercuts.h  utils.h
cpp/src/: main.cpp  papercuts.cpp  utils.cpp
python/: astdump.py  test.py
python/exploration/: pyslang_exploration.py  z3_exploration.py
python/papercuts/: __init__.py  __main__.py  astdump.py  chipper.py  concretizer.py  ec.py  elaborator.py  pc_core.py  pc_utils.py  pypercuts.pyi  status.py  test.py  utils.py
python/papercuts/backends/: __init__.py  base.py  jasper.py
python/papercuts/tests/: run_tests.py  test_arrays.py  test_binop_conditions.py  test_iterative_bitshrink.py  test_nested.py  test_nets.py  test_structs.py
