[build-system]
requires = [
    "scikit-build-core>=0.8",
    "pybind11>=2.13",
]
build-backend = "scikit_build_core.build"

[project]
name = "papercuts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "z3>=0.2.0",
    "z3-solver>=4.15.4.0",
]

[tool.scikit-build]
cmake.source-dir = "."
cmake.build-type = "Release"
install.components = ["pylib"]

[tool.scikit-build.wheel]
packages = ["python/papercuts"]

[tool.uv]
cache-dir = "./.uv_cache"

[tool.ruff]
# Allow lines to be as long as 100.
line-length = 100

[tool.uv.sources]

